--- a/packages/beddel/package.json
+++ b/packages/beddel/package.json
@@ -66,6 +66,8 @@
     "@upstash/redis": "^1.34.3",
     "ai": "^5.0.70",
     "firebase-admin": "12.7.0",
+    "graphql": "^16.10.0",
+    "graphql-yoga": "^5.13.5",
     "isolated-vm": "5.0.1",
     "js-yaml": "^4.1.0",
     "zod": "^4.1.12"
