--- a/packages/beddel/package.json
+++ b/packages/beddel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beddel",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Beddel - A secure YAML parser and OpenAPI endpoint manager for Node.js applications",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -77,12 +77,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/botanarede/beddel.git"
+    "url": "https://github.com/botanarede/beddel-alpha.git"
   },
   "bugs": {
-    "url": "https://github.com/botanarede/beddel/issues"
+    "url": "https://github.com/botanarede/beddel-alpha/issues"
   },
-  "homepage": "https://github.com/botanarede/beddel#readme",
+  "homepage": "https://github.com/botanarede/beddel-alpha#readme",
   "dependencies": {
     "@ai-sdk/google": "^2.0.23",
     "@modelcontextprotocol/sdk": "^1.0.0",
@@ -106,6 +106,7 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/eventsource": "^1.1.15",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
@@ -115,7 +116,8 @@
     "eslint": "^9.0.0",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.50.0"
   },
   "engines": {
     "node": ">=18.0.0"
