feat: Reimplement chat API and server-side logic, update documentation, and refactor UI component imports.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
             "import": "./dist/index.js",
             "types": "./dist/index.d.ts"
         },
+        "./server": {
+            "import": "./dist/server.js",
+            "types": "./dist/server.d.ts"
+        },
         "./client": {
             "import": "./dist/client.js",
             "types": "./dist/client.d.ts"
