chore: bump version to 1.0.1 and add repository, homepage, and bugs metadata.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
     "name": "beddel",
-    "version": "1.0.0",
+    "version": "1.0.1",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/botanarede/beddel.git"
+    },
+    "homepage": "https://beddel.com.br",
+    "bugs": {
+        "url": "https://github.com/botanarede/beddel/issues"
+    },
     "type": "module",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
